--- a/module/metric/test/yaml/product_shadow.yaml
+++ b/module/metric/test/yaml/product_shadow.yaml
@@ -5,6 +5,8 @@ version: "1.0"
 fields:
 - field: id
   range: 1-10000
+- field: status
+  range: normal{4},closed{4}
 - field: shadow
   range: 1{1},0{1}
 - field: createdDate
