--- a/module/metric/test/yaml/bug_resolution_status.yaml
+++ b/module/metric/test/yaml/bug_resolution_status.yaml
@@ -7,6 +7,8 @@ fields:
   range: 1-10000
 - field: product
   range: 1-10{48}
+- field: project
+  range: 1-10{48}
 - field: openedDate
   range: "20100101 000000-20210101 230000:10D"
   type: timestamp
