--- a/module/metric/test/yaml/effort.yaml
+++ b/module/metric/test/yaml/effort.yaml
@@ -5,6 +5,8 @@ version: "1.0"
 fields:
 - field: id
   range: 1-10000
+- field: execution
+  range: 11-50{10}
 - field: date
   range: "20100101 000000-20210101 230000:10D"
   type: timestamp
