--- a/module/metric/test/yaml/execution.yaml
+++ b/module/metric/test/yaml/execution.yaml
@@ -21,4 +21,8 @@ fields:
   range: "20110101 000000-20210101 000000:10D"
   type: timestamp
   format: YYYY-MM-DD
+- field: firstEnd
+  range: "20010101 000000-20110101 000000:10D"
+  type: timestamp
+  format: YYYY-MM-DD
 ...
