--- a/module/metric/test/yaml/feedback.yaml
+++ b/module/metric/test/yaml/feedback.yaml
@@ -17,6 +17,12 @@ fields:
   range: "20110101 000000-20210101 230000:10D"
   type: timestamp
   format: YYYY-MM-DD hh:mm:ss
+- field: reviewedBy
+  range: admin,user{5},test{4},dev{10},pm{8},po{2},closed{10},[]{10}
+- field: reviewedDate
+  range: "20110101 000000-20210101 230000:10D"
+  type: timestamp
+  format: YYYY-MM-DD hh:mm:ss
 - field: deleted
   range: 0{1},1{1}
 ...
