* Add rector nocache command

--- a/misc/composer.json
+++ b/misc/composer.json
@@ -6,6 +6,10 @@
         "rector": [
             "Composer\\Config::disableProcessTimeout",
             "rector process --no-diffs --no-progress-bar"
+        ],
+        "rector-nocache": [
+            "Composer\\Config::disableProcessTimeout",
+            "rector process --no-diffs --no-progress-bar --clear-cache"
         ]
     }
 }
