--- a/module/tree/test/yaml/module.yaml
+++ b/module/tree/test/yaml/module.yaml
@@ -5,7 +5,7 @@ fields:
   - field: id
     range: 1-100
   - field: root
-    range: 1-10{10}
+    range: 1-10{10!}
   - field: branch
     range: 0{5},1-5{5},0{70}
   - field: name
