--- a/module/task/test/yaml/task.yaml
+++ b/module/task/test/yaml/task.yaml
@@ -37,9 +37,11 @@ fields:
     format: "YY/MM/DD"
     postfix: "\t"
   - field: finishedBy
-    range: "[],admin{2},[]{3}"
+    range: "[]{4},admin,[]{4}"
   - field: finishedDate
     range: "20210101 000000:1D"
     type: timestamp
     format: "YY/MM/DD hh::mm:ss"
     postfix: "\t"
+  - field: closedReason
+    range: "[]{4},done,[]{4}"
