* Modify unit test of bugModel::createBuild.

--- a/module/bug/test/model/yaml/createbuild/project_createbuild.yaml
+++ b/module/bug/test/model/yaml/createbuild/project_createbuild.yaml
@@ -3,6 +3,8 @@ title: zt_project
 author: Mengyi Liu
 version: "1.0"
 fields:
+- field: project
+  range: 1
 - field: model
   range: "[]"
 - field: type
