* Modify yaml for bug::resolve.

--- a/module/bug/test/model/yaml/resolve/project_resolve.yaml
+++ b/module/bug/test/model/yaml/resolve/project_resolve.yaml
@@ -3,7 +3,9 @@ title: zt_project
 author: Mengyi Liu
 version: "1.0"
 fields:
+- field: id
+  range: 101-200
 - field: type
-  range: scrum
+  range: scrum,kanban
 ...
 
