* Add unit test of bugTao::fetchBugInfo.

--- a/test/data/productplan.yaml
+++ b/test/data/productplan.yaml
@@ -17,7 +17,7 @@ fields:
     range: 0
   - field: title
     note: "名称"
-    range: [1.0,1.1,长名称好长好长好长好长好长好长好长好长好长好长好长好好长好长好长好长好长好好长好长好长好长好长好好长好长好长好长好长好的名字啊！@ase!!@#%@^&#!]
+    range: 1.0,1.1,长名称好长好长好长好长好长好长好长好长好长好长好长好好长好长好长好长好长好好长好长好长好长好长好好长好长好长好长好长好的名字啊！@ase!!@#%@^&#!
   - field: desc
     note: "描述"
     range: <div>
