* Fix yaml bug.

--- a/test/data/product.yaml
+++ b/test/data/product.yaml
@@ -26,7 +26,7 @@ fields:
       range: 1-300
   - field: shadow
     note: "影子产品"
-    range: 0-1
+    range: 0
   - field: line
     note: "产品线"
     range: 0-10
