--- a/module/project/test/yaml/execution.yaml
+++ b/module/project/test/yaml/execution.yaml
@@ -43,6 +43,8 @@ fields:
     range: 1{4},1{5},1{6},2{6},1{6},1{5}
   - field: parent
     range: 0{4},11{5},60{6},106-111,61{6},100{5}
+  - field: PM
+    range: 'admin,user1,user2,test1,test2'
   - field: path
     fields:
       - field: path1
