--- a/module/project/test/yaml/program.yaml
+++ b/module/project/test/yaml/program.yaml
@@ -40,17 +40,17 @@ fields:
     format: "YY/MM/DD"
     postfix: "\t"
   - field: grade
-    range: 1{14},1{5},1{6},2{6},1{6},1{5}
+    range: 1,2,1{12},1{5},1{6},2{6},1{6},1{5}
   - field: parent
-    range: 0{10},1,2,0{2},11{5},60{6},106-111,61{6},100{5}
+    range: 0,1,0{8},1,2,0{2},11{5},60{6},106-111,61{6},100{5}
   - field: path
     fields:
       - field: path1
         prefix: ","
-        range: 1-10,1,2,61,100,11{5},60{12},61{6},100{5}
+        range: 1,1,3-10,1,2,61,100,11{5},60{12},61{6},100{5}
       - field: path2
         prefix: ","
-        range: "[]{10},11,60,[]{2},101-105,106-111,106-111,118-700"
+        range: "[],2,[]{8},11,60,[]{2},101-105,106-111,106-111,118-700"
         postfix: ","
       - field: path3
         range: "[]{25},112-117,[]{50}"
@@ -63,5 +63,7 @@ fields:
     prefix: ","
     range: "admin,user1,user2,user3,[]{10}"
     postfix: ","
+  - field: hasProduct
+    range: 1{10},0,1,0,1{100}
   - field: deleted
     range: 0{40},1
