+ Add case of the updateTasksStartAndEndDate method.

--- a/module/project/test/yaml/execution.yaml
+++ b/module/project/test/yaml/execution.yaml
@@ -30,12 +30,12 @@ fields:
     range: 1-10000
     prefix: "迭代描述"
   - field: begin
-    range: "(-2M)-(+M):1D"
+    range: "20201101 000000:1D"
     type: timestamp
-    format: "YY/MM/DD"
+    format: "YY/MM/DD hh::mm:ss"
     postfix: "\t"
   - field: end
-    range: "(+1w)-(+2M):1D"
+    range: "20220101 000000:1D"
     type: timestamp
     format: "YY/MM/DD"
     postfix: "\t"
