* Change yaml date format.

--- a/module/project/test/yaml/task.yaml
+++ b/module/project/test/yaml/task.yaml
@@ -33,13 +33,14 @@ fields:
         range: "[]{2},user1{3}"
   - field: estStarted
     range: "20201101 000000:1D"
+    format: "YY-MM-DD"
     type: timestamp
     format: "YY/MM/DD hh::mm:ss"
     postfix: "\t"
   - field: deadline
     range: "20210101 000000:1D"
     type: timestamp
-    format: "YY/MM/DD"
+    format: "YY-MM-DD"
     postfix: "\t"
   - field: finishedBy
     range: "[]{4},admin,[]{4}"
