--- a/module/execution/test/yaml/project.yaml
+++ b/module/execution/test/yaml/project.yaml
@@ -15,7 +15,7 @@ fields:
   - field: begin
     range: "20201101 000000:1D"
     type: timestamp
-    format: "YY/MM/DD hh::mm:ss"
+    format: "YY/MM/DD"
     postfix: "\t"
   - field: end
     range: "20220101 000000:1D"
