--- a/module/execution/test/yaml/burn.yaml
+++ b/module/execution/test/yaml/burn.yaml
@@ -6,10 +6,8 @@ fields:
     - field: execution
       range: 101{5},106{5},107{5}
     - field: date
-      range: "(-2M)-(+M):1D"
-      type: timestamp
-      format: "YY/MM/DD"
-      postfix: "\t"
+      prefix: "2023-07-"
+      range:  10-25
     - field: estimate
       range: 94.3,56.3,55.3,37.8,33.8
     - field: left
