* Adjust unit test check rule.

--- a/module/execution/test/yaml/kanbanlane.yaml
+++ b/module/execution/test/yaml/kanbanlane.yaml
@@ -21,7 +21,7 @@ fields:
     - field: lastEditedTime
       range: "20220101 000000:1D"
       type: timestamp
-      format: "YY/MM/DD hh::mm:ss"
+      format: "YYYY-MM-DD"
       postfix: "\t"
     - field: deleted
       range: "0"
