--- a/module/testcase/test/yaml/module_caselib.yaml
+++ b/module/testcase/test/yaml/module_caselib.yaml
@@ -5,6 +5,8 @@ version: "1.0"
 fields:
   - field: root
     range: 1{20},2{20},3{20},4{20},5{20}
+  - field: parent
+    range: 0{5},4{5},0{90}
   - field: type
     range: caselib
   - field: from
