* Change the type value for the product table.

--- a/module/release/test/yaml/product.yaml
+++ b/module/release/test/yaml/product.yaml
@@ -16,3 +16,5 @@ fields:
     range: 'normal{20},closed{10}'
   - field: PO
     range: 'admin{10},user1{10},user2{10}'
+  - field: type
+    range: 'normal{5},branch{5},normal{20}'
