--- a/module/testcase/test/yaml/treescene.yaml
+++ b/module/testcase/test/yaml/treescene.yaml
@@ -14,12 +14,15 @@ fields:
   - field: path
     fields:
       - field: path1
-        range: 1-11,11{4},15,16{2},18{3}
+        range: 1-11,11{4},15,16,18,18{3}
         prefix: ","
         postfix: ","
       - field: path2
-        range: 0{11},12{2},14,0{2},17,0,19{2}
+        range: 0{11},12{3},15,0,17,0,19{2}
         postfix: ","
       - field: path3
-        range: 0{12},13,0{6},20
+        range: 0{12},13{2},0{5},20
+        postfix: ","
+      - field: path5
+        range: 0{13},14,0{4}
         postfix: ","
