--- a/module/task/test/model/yaml/updatekanban4batchcreate/task.yaml
+++ b/module/task/test/model/yaml/updatekanban4batchcreate/task.yaml
@@ -15,4 +15,4 @@ fields:
     - field: openedDate
       range: "20220101 000000:1W"   # 生成从2021年1月1日0时0分0秒到当前时间的数据，步长为1周
       type: timestamp
-      format: "YY/MM/DD hh:mm:ss"
+      format: "YYYY-MM-DD hh:mm:ss"
