--- a/module/program/test/tao/yaml/getbasedatalist/program.yaml
+++ b/module/program/test/tao/yaml/getbasedatalist/program.yaml
@@ -33,12 +33,12 @@ fields:
   - field: begin
     range: "(-5M)-(+M):1D"
     type: timestamp
-    format: "YY/MM/DD"
+    format: "YYYY-MM-DD"
     postfix: "\t"
   - field: end
     range: "(+10w)-(+2M):1D"
     type: timestamp
-    format: "YY/MM/DD"
+    format: "YYYY-MM-DD"
     postfix: "\t"
   - field: desc
     range: 1-10000
