--- a/module/project/test/yaml/program.yaml
+++ b/module/project/test/yaml/program.yaml
@@ -32,12 +32,12 @@ fields:
   - field: begin
     range: "(-2M)-(+M):1D"
     type: timestamp
-    format: "YY/MM/DD"
+    format: "YYYY-MM-DD"
     postfix: "\t"
   - field: end
     range: "(+1w)-(+2M):1D"
     type: timestamp
-    format: "YY/MM/DD"
+    format: "YYYY-MM-DD"
     postfix: "\t"
   - field: grade
     range: 1,2,1{12},1{5},1{6},2{6},1{6},1{5}
