--- a/module/task/test/model/yaml/aftersplittask/task.yaml
+++ b/module/task/test/model/yaml/aftersplittask/task.yaml
@@ -17,7 +17,7 @@ fields:
     - field: openedDate
       range: "20220101 000000:1W"   # 生成从2021年1月1日0时0分0秒到当前时间的数据，步长为1周
       type: timestamp
-      format: "YY/MM/DD hh:mm:ss"
+      format: "YYYY-MM-DD hh:mm:ss"
     - field: consumed
       range: 1,0
     - field: story
@@ -25,8 +25,8 @@ fields:
     - field: estStarted
       range: "20210101 000000-20220101 230000:360000"
       type: timestamp
-      format: "YY/MM/DD hh:mm:ss"
+      format: "YYYY-MM-DD hh:mm:ss"
     - field: deadline
       range: "20210103 000000-20220101 230000:360000"
       type: timestamp
-      format: "YY/MM/DD hh:mm:ss"
+      format: "YYYY-MM-DD hh:mm:ss"
