--- a/module/task/test/model/yaml/updatekanbancell/kanbanlane_updatekanbancell.yaml
+++ b/module/task/test/model/yaml/updatekanbancell/kanbanlane_updatekanbancell.yaml
@@ -14,6 +14,6 @@ fields:
 - field: lastEditedTime
   range: "20220101 000000"
   type: timestamp
-  format: "YY/MM/DD hh:mm:ss"
+  format: "YYYY-MM-DD hh:mm:ss"
 ...
 
