--- a/module/task/test/yaml/project.yaml
+++ b/module/task/test/yaml/project.yaml
@@ -15,10 +15,8 @@ fields:
   - field: begin
     range: "20201101 000000:1D"
     type: timestamp
-    format: "YY/MM/DD hh::mm:ss"
-    postfix: "\t"
+    format: "YYYY-MM-DD"
   - field: end
     range: "20220101 000000:1D"
     type: timestamp
-    format: "YY/MM/DD"
-    postfix: "\t"
+    format: "YYYY-MM-DD"
