--- a/module/task/test/yaml/task.yaml
+++ b/module/task/test/yaml/task.yaml
@@ -34,19 +34,17 @@ fields:
   - field: estStarted
     range: "20201101 000000:1D"
     type: timestamp
-    format: "YY/MM/DD hh::mm:ss"
-    postfix: "\t"
+    format: "YYYY-MM-DD"
   - field: deadline
     range: "20210101 000000:1D"
     type: timestamp
-    format: "YY/MM/DD"
+    format: "YYYY-MM-DD"
     postfix: "\t"
   - field: finishedBy
     range: "[]{4},admin,[]{4}"
   - field: finishedDate
     range: "20210101 000000:1D"
     type: timestamp
-    format: "YY/MM/DD hh::mm:ss"
-    postfix: "\t"
+    format: "YYYY-MM-DD"
   - field: closedReason
     range: "[]{4},done,[]{4}"
