--- a/module/task/test/yaml/execution.yaml
+++ b/module/task/test/yaml/execution.yaml
@@ -32,7 +32,7 @@ fields:
   - field: begin
     range: "20201101 000000:1D"
     type: timestamp
-    format: "YYYY-MM-DD hh::mm:ss"
+    format: "YYYY-MM-DD"
     postfix: "\t"
   - field: end
     range: "20220101 000000:1D"
