* Dealing with database time error issues.

--- a/module/project/test/yaml/task.yaml
+++ b/module/project/test/yaml/task.yaml
@@ -35,7 +35,7 @@ fields:
     range: "20201101 000000:1D"
     format: "YY-MM-DD"
     type: timestamp
-    format: "YYYY-MM-DD hh::mm:ss"
+    format: "YYYY-MM-DD"
     postfix: "\t"
   - field: deadline
     range: "20210101 000000:1D"
@@ -47,7 +47,7 @@ fields:
   - field: finishedDate
     range: "20210101 000000:1D"
     type: timestamp
-    format: "YYYY-MM-DD hh::mm:ss"
+    format: "YYYY-MM-DD"
     postfix: "\t"
   - field: closedReason
     range: "[]{4},done,[]{4}"
