--- a/module/product/test/yaml/lines.yaml
+++ b/module/product/test/yaml/lines.yaml
@@ -4,33 +4,33 @@ author: zhouxin
 version: "1.0"
 fields:
   - field: id
-    range: 1-20
+    range: 1-100
   - field: root
-    range: 1{5},2{5},3{5},4{5}
+    range: 1-10{5}
   - field: branch
-    range: 0
+    range: 0{28},1{2},4{5},7,8,9{3},0{60}
   - field: name
-    range: 1-20
+    range: 1-100
     prefix: "产品线"
   - field: parent
     range: 0
   - field: path
-    range: 0
+    range: 1-100
     prefix: ","
     postfix: ","
   - field: grade
     range: 1
   - field: order
-    range: 10-200:10
+    range: 10-1000:10
   - field: type
     range: line
   - field: from
-    range: 0
+    range: ''
   - field: owner
-    range: 0
+    range: ''
   - field: collector
-    range: 0
+    range: ''
   - field: short
-    range: 0
+    range: ''
   - field: deleted
     range: 0
