* Adjust yaml date type.

--- a/module/product/test/yaml/lines.yaml
+++ b/module/product/test/yaml/lines.yaml
@@ -25,7 +25,7 @@ fields:
   - field: type
     range: line
   - field: from
-    range: ''
+    range: 0
   - field: owner
     range: ''
   - field: collector
