--- a/module/action/test/model/yaml/getdynamicbysearch/action.yaml
+++ b/module/action/test/model/yaml/getdynamicbysearch/action.yaml
@@ -12,7 +12,7 @@ fields:
     format: ""
   - field: objectID
     note: "对象ID"
-    range: "1-100000"
+    range: 1
     prefix: ""
     postfix: ""
     loop: 0
