* Adjust unit test case and linkage.

--- a/module/branch/test/yaml/product.yaml
+++ b/module/branch/test/yaml/product.yaml
@@ -17,6 +17,6 @@ fields:
   - field: PO
     range: 'admin{10},user1{10},user2{10}'
   - field: type
-    range: 'normal{5},branch{5},normal{20}'
+    range: 'normal{5},branch{5},platform{5},normal{15}'
   - field: shadow
     range: 0{25},1{5},0{5},1{5}
