--- a/module/testcase/test/yaml/treescene.yaml
+++ b/module/testcase/test/yaml/treescene.yaml
@@ -11,18 +11,20 @@ fields:
     range: 1{10},41{10}
   - field: branch
     range: 0{15},1{5}
+  - field: grade
+    range: 1,2,1{4},2,3,1{3},2,3,4,2,1,2,1,2,3
   - field: path
     fields:
       - field: path1
-        range: 1-11,11{4},16{2},18,18{3}
-        prefix: ","
+        range: 0{13},11,0{6}
         postfix: ","
+        prefix: ","
       - field: path2
-        range: 0{11},12{3},15,0,17,0,19{2}
+        range: 0{7},6,0{4},11,12,0{5},18
         postfix: ","
       - field: path3
-        range: 0{12},13{2},0{5},20
+        range: 0,1,0{4},6,7,0{3},11-13,11,0,16,0,18,19,
         postfix: ","
-      - field: path5
-        range: 0{13},14,0{4}
+      - field: path4
+        range: 1-20
         postfix: ","
