--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -5,10 +5,7 @@ ARG VERSION
 ENV ZENTAO_VER=${VERSION}
 ENV EASYSOFT_APP_NAME="ZenTao $ZENTAO_VER"
 
-ARG MYSQL_HOST
-ARG MYSQL_PASSWORD
-ENV MYSQL_HOST=${MYSQL_HOST}
-ENV MYSQL_PASSWORD=${MYSQL_PASSWORD}
+ENV MYSQL_INTERNAL="true"
 
 # Copy ZenTao
 COPY --chown=33:33 . /apps/zentao/
