*[task#127645,doing,5h,3.5h] Add dept yaml file of project managemembers.

--- a/module/project/test/ui/yaml/dept.yaml
+++ b/module/project/test/ui/yaml/dept.yaml
@@ -17,3 +17,8 @@ fields:
     postfix: ","
   - field: grade
     note:  "层级"
+    range: 1
+  - field: position
+    range: ""
+  - field: function
+    range: ""
