+[task#127645,doing,5h,3h] Add project yaml file of project managemembers.

--- a/module/project/test/ui/yaml/project.yaml
+++ b/module/project/test/ui/yaml/project.yaml
@@ -37,3 +37,9 @@ fields:
     range: 1
   - field: parent
     range: 0
+  - field: path
+    prefix: ","
+    range: 1
+    postfix: ","
+  - field: multiple
+    range: 1
