--- a/module/projectrelease/test/ui/yaml/project.yaml
+++ b/module/projectrelease/test/ui/yaml/project.yaml
@@ -37,3 +37,9 @@ fields:
     range: 1
   - field: parent
     range: 0
+  - field: path
+    prefix: ","
+    range: 1
+    postfix: ","
+  - field: multiple
+    range: 1
