+[task#127640,doing,5h,2h] Add projectrelease yaml file of projectrelease link story.

--- a/module/projectrelease/test/ui/yaml/projectrelease.yaml
+++ b/module/projectrelease/test/ui/yaml/projectrelease.yaml
@@ -17,3 +17,21 @@ fields:
     range: "(-1M)-(+1w):60"
     type: timestamp
     format: "YYYY-MM-DD"
+  - field: status
+    range: "[wait]"
+  - field: subStatus
+    range: ' '
+  - field: createdBy
+    note: "由谁创建"
+    range: admin
+    prefix: ""
+    postfix: ""
+    loop: 0
+    format: ""
+  - field: createdDate
+    note: "创建日期"
+    range: "(M)-(w)"
+    type: timestamp
+    format: "YY/MM/DD"
+  - field: deleted
+    range: 0
